syntax = "proto3";


message BaseResponse{
  string  state = 1;
  int32  code = 2;
}

message BotResponse{
   int32  id = 1;
   string  tg_token = 2;
   string  google_token = 3;
   int32 owner =4;
   int32 bot_survey_id =5;
   string state = 6;
   int32 code =7;

}
message Module {
	string question = 1;
	string question_type = 2;
	string answer_type = 3;
	string title = 4;
	repeated Button buttons = 5;
	int32 next_question_id =6;
	int32 id = 7;
}

message Answer{
	int32 module_id = 1;
	string ansewer_text = 2;
}

message Journal
{
	map<int32, Module> modules = 1;
}

message User{
	string title = 1;
	string description =2;
	string contact =3 ;
}

message Button{
	int32 question_id = 1;
	string answer_text = 2;
	int32 next_question_id =3;
}

message UserResponse{
	string title = 1;
	string description =2;
	string contact =3 ;
	string state = 4;
	int32  code =5;

}